aws/website-with-modules/initial/private-network.tf
resource "aws_subnet" "private_subnets" {
  count  = length(data.aws_availability_zones.available.names)
  vpc_id = aws_vpc.custom-vpc.id
  # We start the index at +10 to avoid overlap with public subnets
  cidr_block        = cidrsubnet(var.vpc_cidr, 4, count.index + 10)
  availability_zone = data.aws_availability_zones.available.names[count.index]

  tags = {
    Name = "${var.account}-${var.vpc_name}-private-${count.index}"
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.custom-vpc.id
  route {
    cidr_block     = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.ngw.id
  }
}

resource "aws_route_table_association" "private_assoc" {
  count          = length(aws_subnet.private_subnets)
  subnet_id      = aws_subnet.private_subnets[count.index].id
  route_table_id = aws_route_table.private_rt.id
}
